--- a/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
@@ -18,7 +18,7 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
+        "%%capture CIAO\n",
         "!pip install git+https://github.com/waltsims/k-wave-python"
       ]
     },
