--- a/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
@@ -11,6 +11,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install k-Wave-python and import libraries"
+      ],
+      "metadata": {
+        "id": "ax0i596jiURw"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -18,7 +27,7 @@
       },
       "outputs": [],
       "source": [
-        "%%capture CIAO\n",
+        "%%capture\n",
         "!pip install git+https://github.com/waltsims/k-wave-python"
       ]
     },
@@ -33,6 +42,7 @@
         "from copy import deepcopy\n",
         "\n",
         "import numpy as np\n",
+        "import nibabel as nib\n",
         "import scipy.io\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
@@ -49,21 +59,138 @@
         "from kwave.utils.dotdictionary import dotdict\n",
         "from kwave.utils.filters import gaussian_filter\n",
         "from kwave.utils.mapgen import make_ball\n",
-        "from kwave.utils.signals import get_win, tone_burst"
+        "from kwave.utils.signals import get_win, tone_burst\n",
+        "from oct2py import Oct2Py"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dBSzr3B0HGl-"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# simulation settings\n",
+        "Load CT NIfTI file and extract spacing (voxel dimensions)"
+      ],
+      "metadata": {
+        "id": "HXbbGl7vifgQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filename = 'tua_tac.nii'\n",
+        "nii = nib.load(filename)\n",
+        "hu_full  = nii.get_fdata().astype(np.float32)   # HU matrix\n",
+        "\n",
+        "hdr = nii.header\n",
+        "dx_mm, dy_mm, dz_mm = hdr['pixdim'][1], hdr['pixdim'][2], hdr['pixdim'][3]\n",
+        "dx, dy = dx_mm*1e-3, dy_mm*1e-3"
+      ],
+      "metadata": {
+        "id": "0BzYqHaqiSdm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conversion HU -> acoustic properties + extract one slice"
+      ],
+      "metadata": {
+        "id": "Cvu81TqAjI6R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "oc = Oct2Py()\n",
+        "oc.addpath(r 'C:\\Users\\asus\\AppData\\Roaming\\MathWorks\\MATLAB Add-Ons\\Collections\\k-Wave\\k-Wave')\n",
+        "density_full, sound_speed_full = oc.hounsfield2density(hu_full)\n",
+        "\n",
+        "# Extract one slice for 2D simulation\n",
+        "slice_idx       = hu_full.shape[2] // 2\n",
+        "density_map_2d  = density_full[:, :, slice_idx]\n",
+        "c_map_2d        = sound_speed_full[:, :, slice_idx]"
+      ],
+      "metadata": {
+        "id": "PTN_madDjP3J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Simulation settings (for CT)"
+      ],
+      "metadata": {
+        "id": "dUO-STfXt8Uk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "DATA_CAST = 'single'\n",
         "RUN_SIMULATION = True"
-      ]
+      ],
+      "metadata": {
+        "id": "wuUJyL_4uebT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dimensions\n",
+        "Ny, Nx = density_map_2d.shape\n",
+        "\n",
+        "# dt and t_end\n",
+        "c_max = np.max(sound_speed_full)\n",
+        "dt = min(dx, dy) / (c_max * np.sqrt(2))         # CFL\n",
+        "t_end = 2 * (Nx*dx + Ny*dy) / np.mean(c_map_2d)\n",
+        "\n",
+        "# Build grid\n",
+        "kgrid = kWaveGrid([Nx, Ny], [dx, dy])\n",
+        "kgrid.setTime(int(np.ceil(t_end/dt)), dt)"
+      ],
+      "metadata": {
+        "id": "Hjf4kbObuA2S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Define medium"
+      ],
+      "metadata": {
+        "id": "-fzChFqvuYHb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "medium = kWaveMedium(\n",
+        "    sound_speed = c_map_2d,\n",
+        "    density     = density_map_2d,\n",
+        "    alpha_coeff = np.full_like(c_map_2d, 0.75),\n",
+        "    alpha_power = 1.5\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "7n8Xj2cOuWpJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Previous simulation settings"
+      ],
+      "metadata": {
+        "id": "06CUXLI2jS-K"
+      }
     },
     {
       "cell_type": "code",
@@ -73,33 +200,23 @@
       },
       "outputs": [],
       "source": [
-        "pml_size_points = Vector([15, 10, 10])  # [grid points]\n",
-        "grid_size_points = Vector([256, 256, 128]) - 2 * pml_size_points  # [grid points]\n",
-        "grid_size_meters = 50e-3  # [m]\n",
-        "grid_spacing_meters = grid_size_meters / Vector([grid_size_points.x, grid_size_points.x, grid_size_points.x])\n",
+        "# pml_size_points = Vector([15, 10, 10])  # [grid points]\n",
+        "# grid_size_points = Vector([256, 256, 128]) - 2 * pml_size_points  # [grid points]\n",
+        "# grid_size_meters = 50e-3  # [m]\n",
+        "# grid_spacing_meters = grid_size_meters / Vector([grid_size_points.x, grid_size_points.x, grid_size_points.x])\n",
         "\n",
-        "c0 = 1540\n",
-        "rho0 = 1000\n",
+        "# c0 = 1540\n",
+        "# rho0 = 1000\n",
         "\n",
-        "medium = kWaveMedium(\n",
-        "    sound_speed=None,  # will be set later\n",
-        "    alpha_coeff=0.75,\n",
-        "    alpha_power=1.5,\n",
-        "    BonA=6\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NVDMPQCUHGmC"
-      },
-      "outputs": [],
-      "source": [
-        "kgrid = kWaveGrid(grid_size_points, grid_spacing_meters)\n",
-        "t_end = (grid_size_points.x * grid_spacing_meters.x) * 2.2 / c0  # [s]\n",
-        "kgrid.makeTime(c0, t_end=t_end)"
+        "# medium = kWaveMedium(\n",
+        "#     sound_speed=None,  # will be set later\n",
+        "#     alpha_coeff=0.75,\n",
+        "#     alpha_power=1.5,\n",
+        "#     BonA=6\n",
+        "# )\n",
+        "# kgrid = kWaveGrid(grid_size_points, grid_spacing_meters)\n",
+        "# t_end = (grid_size_points.x * grid_spacing_meters.x) * 2.2 / c0  # [s]\n",
+        "# kgrid.makeTime(c0, t_end=t_end)"
       ]
     },
     {
@@ -176,7 +293,7 @@
       },
       "outputs": [],
       "source": [
-        "# Define a random distribution of scatterers for the medium\n",
+        "Define a random distribution of scatterers for the medium\n",
         "background_map_mean = 1\n",
         "background_map_std = 0.008\n",
         "background_map = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
