--- a/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb
@@ -49,7 +49,8 @@
         "from kwave.data import Vector\n",
         "from kwave.kgrid import kWaveGrid\n",
         "from kwave.kmedium import kWaveMedium\n",
-        "from kwave.kspaceFirstOrder3D import kspaceFirstOrder3D\n",
+        "from kwave.kspaceFirstOrder2D import kspaceFirstOrder2D\n",
+        "# from kwave.kspaceFirstOrder3D import kspaceFirstOrder3D\n",
         "from kwave.ktransducer import NotATransducer, kWaveTransducerSimple\n",
         "from kwave.options.simulation_execution_options import SimulationExecutionOptions\n",
         "from kwave.options.simulation_options import SimulationOptions\n",
@@ -58,15 +59,38 @@
         "from kwave.utils.conversion import db2neper\n",
         "from kwave.utils.dotdictionary import dotdict\n",
         "from kwave.utils.filters import gaussian_filter\n",
-        "from kwave.utils.mapgen import make_ball\n",
+        "# from kwave.utils.mapgen import make_ball\n",
         "from kwave.utils.signals import get_win, tone_burst\n",
-        "from oct2py import Oct2Py"
+        "from kwave.utils.conversion import hounsfield2density, hounsfield2soundspeed"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Load CT NIfTI file and extract spacing (voxel dimensions)"
+        "Settings"
+      ],
+      "metadata": {
+        "id": "0TRa-38P-ZPQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATA_CAST = 'single'\n",
+        "RUN_SIMULATION = True\n",
+        "\n",
+        "filename = 'CT_volume.nii'"
+      ],
+      "metadata": {
+        "id": "wuUJyL_4uebT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load CT NIfTI file and extract central slice"
       ],
       "metadata": {
         "id": "HXbbGl7vifgQ"
@@ -75,13 +99,15 @@
     {
       "cell_type": "code",
       "source": [
-        "filename = 'tua_tac.nii'\n",
-        "nii = nib.load(filename)\n",
-        "hu_full  = nii.get_fdata().astype(np.float32)   # HU matrix\n",
+        "ct_img  = nib.load(filename)\n",
+        "ct_vol = ct_img.get_fdata()\n",
+        "dx_mm, dy_mm, dz_mm = ct_img.header.get_zooms() # 3d spacing in mm\n",
+        "dx, dy = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
         "\n",
-        "hdr = nii.header\n",
-        "dx_mm, dy_mm, dz_mm = hdr['pixdim'][1], hdr['pixdim'][2], hdr['pixdim'][3]\n",
-        "dx, dy = dx_mm*1e-3, dy_mm*1e-3"
+        "# Extract slice\n",
+        "slice_idx = ct_vol.shape[2] // 2\n",
+        "ct_slice  = np.flipud(ct_vol[:, :, slice_idx])\n",
+        "Nx, Nz = ct_slice.shape"
       ],
       "metadata": {
         "id": "0BzYqHaqiSdm"
@@ -92,7 +118,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Conversion HU -> acoustic properties + extract one slice"
+        "Conversion HU -> acoustic properties: density [kg/m^3] and sound speed [m/s]"
       ],
       "metadata": {
         "id": "Cvu81TqAjI6R"
@@ -101,14 +127,8 @@
     {
       "cell_type": "code",
       "source": [
-        "oc = Oct2Py()\n",
-        "oc.addpath(r 'C:\\Users\\asus\\AppData\\Roaming\\MathWorks\\MATLAB Add-Ons\\Collections\\k-Wave\\k-Wave')\n",
-        "density_full, sound_speed_full = oc.hounsfield2density(hu_full)\n",
-        "\n",
-        "# Extract one slice for 2D simulation\n",
-        "slice_idx       = hu_full.shape[2] // 2\n",
-        "density_map_2d  = density_full[:, :, slice_idx]\n",
-        "c_map_2d        = sound_speed_full[:, :, slice_idx]"
+        "density_map     = hounsfield2density(ct_slice, plot_fitting=False).astype(np.float32) # :contentReference[oaicite:0]{index=0}\n",
+        "sound_speed_map = hounsfield2soundspeed(ct_slice).astype(np.float32) # :contentReference[oaicite:1]{index=1}"
       ],
       "metadata": {
         "id": "PTN_madDjP3J"
@@ -119,41 +139,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Simulation settings (for CT)"
+        "2D grid"
       ],
       "metadata": {
-        "id": "dUO-STfXt8Uk"
+        "id": "9y5IdV8Y85eH"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "DATA_CAST = 'single'\n",
-        "RUN_SIMULATION = True"
+        "pml_size_points = Vector([10, 10])\n",
+        "grid_size_points = Vector([Nx, Nz]) - 2 * pml_size_points\n",
+        "grid_spacing_meters = Vector([dx, dy])\n",
+        "\n",
+        "kgrid = kWaveGrid(grid_size_points, grid_spacing_meters)"
       ],
       "metadata": {
-        "id": "wuUJyL_4uebT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Dimensions\n",
-        "Ny, Nx = density_map_2d.shape\n",
-        "\n",
-        "# dt and t_end\n",
-        "c_max = np.max(sound_speed_full)\n",
-        "dt = min(dx, dy) / (c_max * np.sqrt(2))         # CFL\n",
-        "t_end = 2 * (Nx*dx + Ny*dy) / np.mean(c_map_2d)\n",
-        "\n",
-        "# Build grid\n",
-        "kgrid = kWaveGrid([Nx, Ny], [dx, dy])\n",
-        "kgrid.setTime(int(np.ceil(t_end/dt)), dt)"
-      ],
-      "metadata": {
-        "id": "Hjf4kbObuA2S"
+        "id": "W1nszfxc85OJ"
       },
       "execution_count": null,
       "outputs": []
@@ -171,10 +173,11 @@
       "cell_type": "code",
       "source": [
         "medium = kWaveMedium(\n",
-        "    sound_speed = c_map_2d,\n",
-        "    density     = density_map_2d,\n",
-        "    alpha_coeff = np.full_like(c_map_2d, 0.75),\n",
+        "    sound_speed = sound_speed_map,\n",
+        "    density     = density_map,\n",
+        "    alpha_coeff = 0.75,\n",
         "    alpha_power = 1.5\n",
+        "    BonA = 6\n",
         ")"
       ],
       "metadata": {
@@ -186,38 +189,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Previous simulation settings"
+        "Input signal"
       ],
       "metadata": {
         "id": "06CUXLI2jS-K"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cPwRo8G5HGmA"
-      },
-      "outputs": [],
-      "source": [
-        "# pml_size_points = Vector([15, 10, 10])  # [grid points]\n",
-        "# grid_size_points = Vector([256, 256, 128]) - 2 * pml_size_points  # [grid points]\n",
-        "# grid_size_meters = 50e-3  # [m]\n",
-        "# grid_spacing_meters = grid_size_meters / Vector([grid_size_points.x, grid_size_points.x, grid_size_points.x])\n",
-        "\n",
-        "# c0 = 1540\n",
-        "# rho0 = 1000\n",
-        "\n",
-        "# medium = kWaveMedium(\n",
-        "#     sound_speed=None,  # will be set later\n",
-        "#     alpha_coeff=0.75,\n",
-        "#     alpha_power=1.5,\n",
-        "#     BonA=6\n",
-        "# )\n",
-        "# kgrid = kWaveGrid(grid_size_points, grid_spacing_meters)\n",
-        "# t_end = (grid_size_points.x * grid_spacing_meters.x) * 2.2 / c0  # [s]\n",
-        "# kgrid.makeTime(c0, t_end=t_end)"
-      ]
     },
     {
       "cell_type": "code",
@@ -234,6 +210,15 @@
         "input_signal = tone_burst(1 / kgrid.dt, tone_burst_freq, tone_burst_cycles)\n",
         "input_signal = (source_strength / (c0 * rho0)) * input_signal"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Transducer"
+      ],
+      "metadata": {
+        "id": "jE6eFNczBxse"
+      }
     },
     {
       "cell_type": "code",
@@ -255,13 +240,21 @@
         "        transducer.number_elements - 1) * transducer.element_spacing\n",
         "\n",
         "# use this to position the transducer in the middle of the computational grid\n",
-        "transducer.position = np.round([\n",
-        "    1,\n",
-        "    grid_size_points.y / 2 - transducer_width / 2,\n",
-        "    grid_size_points.z / 2 - transducer.element_length / 2\n",
-        "])\n",
+        "start_x = np.round(grid_size_points.x/2 - transducer_width/2)\n",
+        "depth_y = 1\n",
+        "\n",
+        "transducer.position = [start_x, depth_y]\n",
         "transducer = kWaveTransducerSimple(kgrid, **transducer)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Previous simulation settings"
+      ],
+      "metadata": {
+        "id": "8mvxvxVhBsO3"
+      }
     },
     {
       "cell_type": "code",
@@ -271,72 +264,45 @@
       },
       "outputs": [],
       "source": [
-        "not_transducer = dotdict()\n",
-        "not_transducer.sound_speed = c0  # sound speed [m/s]\n",
-        "not_transducer.focus_distance = 30e-3  # focus distance [m]\n",
-        "not_transducer.elevation_focus_distance = 30e-3  # focus distance in the elevation plane [m]\n",
-        "not_transducer.steering_angle = 0  # steering angle [degrees]\n",
-        "not_transducer.steering_angle_max = 32  # steering angle [degrees]\n",
-        "not_transducer.transmit_apodization = 'Hanning'\n",
-        "not_transducer.receive_apodization = 'Rectangular'\n",
-        "not_transducer.active_elements = np.ones((transducer.number_elements, 1))\n",
-        "not_transducer.input_signal = input_signal\n",
+        "# not_transducer = dotdict()\n",
+        "# not_transducer.sound_speed = c0  # sound speed [m/s]\n",
+        "# not_transducer.focus_distance = 30e-3  # focus distance [m]\n",
+        "# not_transducer.elevation_focus_distance = 30e-3  # focus distance in the elevation plane [m]\n",
+        "# not_transducer.steering_angle = 0  # steering angle [degrees]\n",
+        "# not_transducer.steering_angle_max = 32  # steering angle [degrees]\n",
+        "# not_transducer.transmit_apodization = 'Hanning'\n",
+        "# not_transducer.receive_apodization = 'Rectangular'\n",
+        "# not_transducer.active_elements = np.ones((transducer.number_elements, 1))\n",
+        "# not_transducer.input_signal = input_signal\n",
         "\n",
-        "not_transducer = NotATransducer(transducer, kgrid, **not_transducer)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7z10B3QEHGmI"
-      },
-      "outputs": [],
-      "source": [
-        "Define a random distribution of scatterers for the medium\n",
-        "background_map_mean = 1\n",
-        "background_map_std = 0.008\n",
-        "background_map = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
+        "# not_transducer = NotATransducer(transducer, kgrid, **not_transducer)\n",
         "\n",
-        "sound_speed_map = c0 * background_map\n",
-        "density_map = rho0 * background_map"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "S2Mhan_THGmK"
-      },
-      "outputs": [],
-      "source": [
-        "# Define a random distribution of scatterers for the highly scattering region\n",
-        "scattering_map = np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
-        "scattering_c0 = np.clip(c0 + 25 + 75 * scattering_map, 1400, 1600)\n",
-        "scattering_rho0 = scattering_c0 / 1.5"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4H_nieihHGmL"
-      },
-      "outputs": [],
-      "source": [
-        "# Define a sphere for a highly scattering region\n",
-        "radius = 8e-3\n",
-        "x_pos = 32e-3\n",
-        "y_pos = kgrid.dy * kgrid.Ny / 2\n",
-        "z_pos = kgrid.dz * kgrid.Nz / 2\n",
-        "ball_center = np.round(Vector([x_pos, y_pos, z_pos]) / kgrid.dx)\n",
-        "scattering_region1 = make_ball(grid_size_points, ball_center, round(radius / kgrid.dx)).nonzero()\n",
+        "# # Define a random distribution of scatterers for the medium\n",
+        "# background_map_mean = 1\n",
+        "# background_map_std = 0.008\n",
+        "# background_map = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
         "\n",
-        "sound_speed_map[scattering_region1] = scattering_c0[scattering_region1]\n",
-        "density_map[scattering_region1] = scattering_rho0[scattering_region1]\n",
+        "# sound_speed_map = c0 * background_map\n",
+        "# density_map = rho0 * background_map\n",
         "\n",
-        "medium.sound_speed = sound_speed_map\n",
-        "medium.density = density_map"
+        "# # Define a random distribution of scatterers for the highly scattering region\n",
+        "# scattering_map = np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
+        "# scattering_c0 = np.clip(c0 + 25 + 75 * scattering_map, 1400, 1600)\n",
+        "# scattering_rho0 = scattering_c0 / 1.5\n",
+        "\n",
+        "# # Define a sphere for a highly scattering region\n",
+        "# radius = 8e-3\n",
+        "# x_pos = 32e-3\n",
+        "# y_pos = kgrid.dy * kgrid.Ny / 2\n",
+        "# z_pos = kgrid.dz * kgrid.Nz / 2\n",
+        "# ball_center = np.round(Vector([x_pos, y_pos, z_pos]) / kgrid.dx)\n",
+        "# scattering_region1 = make_ball(grid_size_points, ball_center, round(radius / kgrid.dx)).nonzero()\n",
+        "\n",
+        "# sound_speed_map[scattering_region1] = scattering_c0[scattering_region1]\n",
+        "# density_map[scattering_region1] = scattering_rho0[scattering_region1]\n",
+        "\n",
+        "# medium.sound_speed = sound_speed_map\n",
+        "# medium.density = density_map"
       ]
     },
     {
@@ -374,11 +340,11 @@
         "        # Update the current steering angle\n",
         "        not_transducer.steering_angle = steering_angles[angle_index]\n",
         "\n",
-        "        sensor_data = kspaceFirstOrder3D(\n",
+        "        sensor_data = kspaceFirstOrder2D(\n",
         "            medium=deepcopy(medium),  # Medium is altered in-place in this function\n",
         "            kgrid=kgrid,\n",
-        "            source=not_transducer,\n",
-        "            sensor=not_transducer,\n",
+        "            source=transducer,\n",
+        "            sensor=transducer,\n",
         "            simulation_options=simulation_options,\n",
         "            execution_options=SimulationExecutionOptions(is_gpu_simulation=True)\n",
         "        )\n",
@@ -387,7 +353,7 @@
         "\n",
         "    scipy.io.savemat('example_us_phased_array_scan_lines.mat', {'scan_lines': scan_lines})\n",
         "else:\n",
-        "    scan_lines = scipy.io.loadmat('example_us_phased_array_scan_lines')['scan_lines']\n"
+        "    scan_lines = scipy.io.loadmat('example_us_phased_array_scan_lines')['scan_lines']"
       ]
     },
     {
