--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vanessacannizzaropolimi/US_Simulation/blob/main/examples/us_bmode_phased_array/us_bmode_phased_array.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vanessacannizzaropolimi/US_Simulation/blob/main/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -99,15 +99,15 @@
     {
       "cell_type": "code",
       "source": [
-        "ct_img  = nib.load(filename)\n",
-        "ct_vol = ct_img.get_fdata()\n",
-        "dx_mm, dy_mm, dz_mm = ct_img.header.get_zooms() # 3d spacing in mm\n",
-        "dx, dy = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
+        "ct_img                         = nib.load(filename)\n",
+        "ct_vol                         = ct_img.get_fdata()\n",
+        "dx_mm, dy_mm, dz_mm            = ct_img.header.get_zooms() # 3d spacing in mm\n",
+        "lateral_spacing, depth_spacing = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
         "\n",
         "# Extract slice\n",
         "slice_idx = ct_vol.shape[2] // 2\n",
-        "ct_slice  = np.flipud(ct_vol[:, :, slice_idx])\n",
-        "Nx, Nz = ct_slice.shape"
+        "ct_slice  = np.flipud(ct_vol[:, :, slice_idx]) # shape = (Nx, Ny)\n",
+        "Nx, Ny    = ct_slice.shape # Nx = lateral, Ny = spacing"
       ],
       "metadata": {
         "id": "0BzYqHaqiSdm"
@@ -148,11 +148,13 @@
     {
       "cell_type": "code",
       "source": [
-        "pml_size_points = Vector([10, 10])\n",
-        "grid_size_points = Vector([Nx, Nz]) - 2 * pml_size_points\n",
-        "grid_spacing_meters = Vector([dx, dy])\n",
+        "# |<- PML ->|<------ computational domain ------>|<- PML ->|\n",
+        "# |pml_size pts   (Nx - 2*pml_size) pts      pml_size pts|\n",
+        "pml_size_points     = Vector([10, 10]) # [grid points]\n",
+        "grid_size_points    = Vector([Nx, Ny]) - 2 * pml_size_points\n",
+        "grid_spacing_meters = Vector([lateral_spacing, depth_spacing]) # grid spacing is given by ct resolution\n",
         "\n",
-        "kgrid = kWaveGrid(grid_size_points, grid_spacing_meters)"
+        "kgrid               = kWaveGrid(grid_size_points, grid_spacing_meters)"
       ],
       "metadata": {
         "id": "W1nszfxc85OJ"
@@ -173,11 +175,11 @@
       "cell_type": "code",
       "source": [
         "medium = kWaveMedium(\n",
-        "    sound_speed = sound_speed_map,\n",
-        "    density     = density_map,\n",
-        "    alpha_coeff = 0.75,\n",
-        "    alpha_power = 1.5\n",
-        "    BonA = 6\n",
+        "  sound_speed = sound_speed_map,\n",
+        "  density     = density_map,\n",
+        "  alpha_coeff = 0.75,\n",
+        "  alpha_power = 1.5\n",
+        "  BonA        = 6\n",
         ")"
       ],
       "metadata": {
@@ -203,8 +205,8 @@
       },
       "outputs": [],
       "source": [
-        "source_strength = 1e6  # [Pa]\n",
-        "tone_burst_freq = 1e6  # [Hz]\n",
+        "source_strength   = 1e6  # [Pa]\n",
+        "tone_burst_freq   = 1e6  # [Hz]\n",
         "tone_burst_cycles = 4\n",
         "\n",
         "input_signal = tone_burst(1 / kgrid.dt, tone_burst_freq, tone_burst_cycles)\n",
