--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -101,13 +101,13 @@
       "source": [
         "ct_img                         = nib.load(filename)\n",
         "ct_vol                         = ct_img.get_fdata()\n",
-        "dx_mm, dy_mm, dz_mm            = ct_img.header.get_zooms() # 3d spacing in mm\n",
+        "dx_mm, dy_mm, dz_mm            = ct_img.header.get_zooms()  # 3d spacing in mm\n",
         "lateral_spacing, depth_spacing = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
         "\n",
-        "# Extract slice\n",
+        "# extract slice\n",
         "slice_idx = ct_vol.shape[2] // 2\n",
         "ct_slice  = np.flipud(ct_vol[:, :, slice_idx]) # shape = (Nx, Ny)\n",
-        "Nx, Ny    = ct_slice.shape # Nx = lateral, Ny = spacing"
+        "Nx, Ny    = ct_slice.shape                     # Nx = lateral, Ny = spacing"
       ],
       "metadata": {
         "id": "0BzYqHaqiSdm"
@@ -128,7 +128,7 @@
       "cell_type": "code",
       "source": [
         "density_map     = hounsfield2density(ct_slice, plot_fitting=False).astype(np.float32) # :contentReference[oaicite:0]{index=0}\n",
-        "sound_speed_map = hounsfield2soundspeed(ct_slice).astype(np.float32) # :contentReference[oaicite:1]{index=1}"
+        "sound_speed_map = hounsfield2soundspeed(ct_slice).astype(np.float32)                  # :contentReference[oaicite:1]{index=1}"
       ],
       "metadata": {
         "id": "PTN_madDjP3J"
@@ -139,7 +139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2D grid"
+        "2D grid and temporal dependencies"
       ],
       "metadata": {
         "id": "9y5IdV8Y85eH"
@@ -150,11 +150,17 @@
       "source": [
         "# |<- PML ->|<------ computational domain ------>|<- PML ->|\n",
         "# |pml_size pts   (Nx - 2*pml_size) pts      pml_size pts|\n",
-        "pml_size_points     = Vector([10, 10]) # [grid points]\n",
+        "pml_size_points     = Vector([10, 10])                         # [grid points]\n",
         "grid_size_points    = Vector([Nx, Ny]) - 2 * pml_size_points\n",
         "grid_spacing_meters = Vector([lateral_spacing, depth_spacing]) # grid spacing is given by ct resolution\n",
         "\n",
-        "kgrid               = kWaveGrid(grid_size_points, grid_spacing_meters)"
+        "kgrid               = kWaveGrid(grid_size_points, grid_spacing_meters)\n",
+        "\n",
+        "c0           = 1540\n",
+        "# c0           = np.max(sound_speed)\n",
+        "domain_depth = grid_size_points.y * grid_spacing_meters.y # depth [m]\n",
+        "t_end        = domain_depth * 2.2 / c0                    # [s], 2.2 is safety factor for overshoot\n",
+        "kgrid.make_time_grid(c0, t_end = t_end)"
       ],
       "metadata": {
         "id": "W1nszfxc85OJ"
@@ -165,7 +171,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Define medium"
+        "Medium"
       ],
       "metadata": {
         "id": "-fzChFqvuYHb"
@@ -175,8 +181,8 @@
       "cell_type": "code",
       "source": [
         "medium = kWaveMedium(\n",
-        "  sound_speed = sound_speed_map,\n",
-        "  density     = density_map,\n",
+        "  sound_speed = None,\n",
+        "  density     = None,\n",
         "  alpha_coeff = 0.75,\n",
         "  alpha_power = 1.5\n",
         "  BonA        = 6\n",
@@ -205,9 +211,10 @@
       },
       "outputs": [],
       "source": [
-        "source_strength   = 1e6  # [Pa]\n",
-        "tone_burst_freq   = 1e6  # [Hz]\n",
-        "tone_burst_cycles = 4\n",
+        "source_strength   = 1e6  # [Pa] pressure amplitude\n",
+        "tone_burst_freq   = 1e6  # [Hz] burst central frequency\n",
+        "tone_burst_cycles = 4    # burst cycles\n",
+        "rho0              = 1000\n",
         "\n",
         "input_signal = tone_burst(1 / kgrid.dt, tone_burst_freq, tone_burst_cycles)\n",
         "input_signal = (source_strength / (c0 * rho0)) * input_signal"
@@ -230,29 +237,32 @@
       },
       "outputs": [],
       "source": [
-        "transducer = dotdict()\n",
-        "transducer.number_elements = 64  # total number of transducer elements\n",
-        "transducer.element_width = 1  # width of each element [grid points/voxels]\n",
-        "transducer.element_length = 40  # length of each element [grid points/voxels]\n",
-        "transducer.element_spacing = 0  # spacing (kerf  width) between the elements [grid points/voxels]\n",
-        "transducer.radius = float('inf')  # radius of curvature of the transducer [m]\n",
+        "transducer                 = dotdict()\n",
+        "transducer.number_elements = 64            # total number of transducer elements\n",
+        "transducer.element_width   = 1             # width of each element [grid points]\n",
+        "transducer.element_length  = 40            # length of each element [grid points]\n",
+        "transducer.element_spacing = 0             # spacing (kerf  width) between the elements [grid points]\n",
+        "transducer.radius          = float('inf')  # radius of curvature of the transducer [m]\n",
         "\n",
         "# calculate the width of the transducer in grid points\n",
-        "transducer_width = transducer.number_elements * transducer.element_width + (\n",
-        "        transducer.number_elements - 1) * transducer.element_spacing\n",
+        "transducer_width = (\n",
+        "    transducer.number_elements * transducer.element_width\n",
+        "    + (transducer.number_elements - 1) * transducer.element_spacing\n",
+        ")\n",
         "\n",
         "# use this to position the transducer in the middle of the computational grid\n",
-        "start_x = np.round(grid_size_points.x/2 - transducer_width/2)\n",
-        "depth_y = 1\n",
+        "lateral_start_index = np.round(grid_size_points.x/2 - transducer_width/2)\n",
+        "depth_start_index   = 1\n",
         "\n",
-        "transducer.position = [start_x, depth_y]\n",
-        "transducer = kWaveTransducerSimple(kgrid, **transducer)"
+        "transducer.position = [lateral_start_index, depth_start_index]\n",
+        "\n",
+        "transducer          = kWaveTransducerSimple(kgrid, **transducer)"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Previous simulation settings"
+        "“Not-A-Transducer” for source/sensor"
       ],
       "metadata": {
         "id": "8mvxvxVhBsO3"
@@ -266,46 +276,102 @@
       },
       "outputs": [],
       "source": [
-        "# not_transducer = dotdict()\n",
-        "# not_transducer.sound_speed = c0  # sound speed [m/s]\n",
-        "# not_transducer.focus_distance = 30e-3  # focus distance [m]\n",
-        "# not_transducer.elevation_focus_distance = 30e-3  # focus distance in the elevation plane [m]\n",
-        "# not_transducer.steering_angle = 0  # steering angle [degrees]\n",
-        "# not_transducer.steering_angle_max = 32  # steering angle [degrees]\n",
-        "# not_transducer.transmit_apodization = 'Hanning'\n",
-        "# not_transducer.receive_apodization = 'Rectangular'\n",
-        "# not_transducer.active_elements = np.ones((transducer.number_elements, 1))\n",
-        "# not_transducer.input_signal = input_signal\n",
+        "not_transducer                      = dotdict()\n",
+        "not_transducer.sound_speed          = c0  # sound speed [m/s]\n",
+        "not_transducer.focus_distance       = 30e-3  # focus distance [m]\n",
+        "# in 2D we don't need elevation_focus_distance!\n",
+        "not_transducer.steering_angle       = 0  # steering angle [degrees]\n",
+        "not_transducer.steering_angle_max   = 32  # steering angle [degrees]\n",
+        "not_transducer.transmit_apodization = 'Hanning'\n",
+        "not_transducer.receive_apodization  = 'Rectangular'\n",
+        "not_transducer.active_elements      = np.ones((transducer.number_elements, 1))\n",
+        "not_transducer.input_signal         = input_signal\n",
         "\n",
-        "# not_transducer = NotATransducer(transducer, kgrid, **not_transducer)\n",
-        "\n",
-        "# # Define a random distribution of scatterers for the medium\n",
-        "# background_map_mean = 1\n",
-        "# background_map_std = 0.008\n",
-        "# background_map = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
-        "\n",
-        "# sound_speed_map = c0 * background_map\n",
-        "# density_map = rho0 * background_map\n",
-        "\n",
-        "# # Define a random distribution of scatterers for the highly scattering region\n",
-        "# scattering_map = np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
-        "# scattering_c0 = np.clip(c0 + 25 + 75 * scattering_map, 1400, 1600)\n",
-        "# scattering_rho0 = scattering_c0 / 1.5\n",
-        "\n",
-        "# # Define a sphere for a highly scattering region\n",
-        "# radius = 8e-3\n",
-        "# x_pos = 32e-3\n",
-        "# y_pos = kgrid.dy * kgrid.Ny / 2\n",
-        "# z_pos = kgrid.dz * kgrid.Nz / 2\n",
-        "# ball_center = np.round(Vector([x_pos, y_pos, z_pos]) / kgrid.dx)\n",
-        "# scattering_region1 = make_ball(grid_size_points, ball_center, round(radius / kgrid.dx)).nonzero()\n",
-        "\n",
-        "# sound_speed_map[scattering_region1] = scattering_c0[scattering_region1]\n",
-        "# density_map[scattering_region1] = scattering_rho0[scattering_region1]\n",
-        "\n",
-        "# medium.sound_speed = sound_speed_map\n",
-        "# medium.density = density_map"
+        "not_transducer                      = NotATransducer(transducer, kgrid, **not_transducer)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random scatters (speckle-like)"
+      ],
+      "metadata": {
+        "id": "iYjx-G_i8Q23"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a random distribution of scatterers for the medium and add\n",
+        "background_map_mean = 1\n",
+        "background_map_std  = 0.008\n",
+        "background_map      = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny)\n",
+        "\n",
+        "sound_speed_map     = c0 * background_map\n",
+        "density_map         = rho0 * background_map\n",
+        "\n",
+        "medium.sound_speed  = sound_speed_map.astype(np.float32)\n",
+        "medium.density      = density_map.astype(np.float32)"
+      ],
+      "metadata": {
+        "id": "fzfCU0br7-hH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Segment the bone structures on the CT slice and apply enhanced scattering properties to those regions\n",
+        "# 1. Segment the region of interest on the CT slice (e.g., bone) based on Hounsfield Units\n",
+        "hu_threshold = 300                        # HU threshold above which voxels are considered bone\n",
+        "bone_mask    = (ct_slice > hu_threshold) # boolean mask of the high-density region\n",
+        "\n",
+        "# 2. Generate scattering parameters for that region (reusing your clipping logic)\n",
+        "scattering_map = np.random.randn(*ct_slice.shape)             # random perturbation map\n",
+        "scattering_c0   = np.clip(                           # clamp sound speed values between 1400 and 1600 m/s\n",
+        "    c0 + 25 + 75 * scattering_map,\n",
+        "    1400,\n",
+        "    1600\n",
+        ")\n",
+        "scattering_rho0 = scattering_c0 / 1.5                    # density values proportional to sound speed\n",
+        "\n",
+        "# 3. Overwrite the CT-derived maps only where the mask is True\n",
+        "sound_speed_map[bone_mask] = scattering_c0[bone_mask]    # apply higher scattering speed in bone regions\n",
+        "density_map    [bone_mask] = scattering_rho0[bone_mask]   # apply corresponding density\n",
+        "\n",
+        "# 4. Update the medium with the modified maps\n",
+        "medium.sound_speed = sound_speed_map.astype(np.float32)  # ensure correct dtype for simulation\n",
+        "medium.density     = density_map.astype(np.float32)"
+      ],
+      "metadata": {
+        "id": "XbDL2t278A_G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a sphere for a highly scattering region\n",
+        "radius = 8e-3\n",
+        "x_pos = 32e-3\n",
+        "y_pos = kgrid.dy * kgrid.Ny / 2\n",
+        "z_pos = kgrid.dz * kgrid.Nz / 2\n",
+        "ball_center = np.round(Vector([x_pos, y_pos, z_pos]) / kgrid.dx)\n",
+        "scattering_region1 = make_ball(grid_size_points, ball_center, round(radius / kgrid.dx)).nonzero()\n",
+        "\n",
+        "sound_speed_map[scattering_region1] = scattering_c0[scattering_region1]\n",
+        "density_map[scattering_region1] = scattering_rho0[scattering_region1]\n",
+        "\n",
+        "medium.sound_speed = sound_speed_map\n",
+        "medium.density = density_map"
+      ],
+      "metadata": {
+        "id": "I9g1rc7T8DDG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
