--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -302,7 +302,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define a random distribution of scatterers for the medium and add\n",
+        "# define a random distribution of scatterers\n",
         "background_map_mean = 1\n",
         "background_map_std  = 0.008\n",
         "background_map      = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny)\n",
@@ -310,6 +310,7 @@
         "sound_speed_map     = c0 * background_map\n",
         "density_map         = rho0 * background_map\n",
         "\n",
+        "# add scatters to medium\n",
         "medium.sound_speed  = sound_speed_map.astype(np.float32)\n",
         "medium.density      = density_map.astype(np.float32)"
       ],
@@ -322,6 +323,7 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "# Segment the bone structures on the CT slice and apply enhanced scattering properties to those regions\n",
         "# 1. Segment the region of interest on the CT slice (e.g., bone) based on Hounsfield Units\n",
         "hu_threshold = 300                        # HU threshold above which voxels are considered bone\n",
@@ -342,36 +344,24 @@
         "\n",
         "# 4. Update the medium with the modified maps\n",
         "medium.sound_speed = sound_speed_map.astype(np.float32)  # ensure correct dtype for simulation\n",
-        "medium.density     = density_map.astype(np.float32)"
+        "medium.density     = density_map.astype(np.float32)\n",
+        "'''"
       ],
       "metadata": {
+        "cellView": "code",
         "id": "XbDL2t278A_G"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Define a sphere for a highly scattering region\n",
-        "radius = 8e-3\n",
-        "x_pos = 32e-3\n",
-        "y_pos = kgrid.dy * kgrid.Ny / 2\n",
-        "z_pos = kgrid.dz * kgrid.Nz / 2\n",
-        "ball_center = np.round(Vector([x_pos, y_pos, z_pos]) / kgrid.dx)\n",
-        "scattering_region1 = make_ball(grid_size_points, ball_center, round(radius / kgrid.dx)).nonzero()\n",
-        "\n",
-        "sound_speed_map[scattering_region1] = scattering_c0[scattering_region1]\n",
-        "density_map[scattering_region1] = scattering_rho0[scattering_region1]\n",
-        "\n",
-        "medium.sound_speed = sound_speed_map\n",
-        "medium.density = density_map"
+        "# Run simulation"
       ],
       "metadata": {
-        "id": "I9g1rc7T8DDG"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "TsEKml4kBCyN"
+      }
     },
     {
       "cell_type": "code",
@@ -381,44 +371,47 @@
       },
       "outputs": [],
       "source": [
-        "# Range of steering angles to test\n",
-        "steering_angles = np.arange(-32, 33, 2)\n",
-        "\n",
-        "# Preallocate the storage\n",
+        "# define range of steering angles to test and preallocate the storage\n",
+        "steering_angles   = np.arange(-32, 33, 2)\n",
         "number_scan_lines = len(steering_angles)\n",
-        "scan_lines = np.zeros((number_scan_lines, kgrid.Nt))\n",
+        "scan_lines        = np.zeros((number_scan_lines, kgrid.Nt))\n",
         "\n",
         "if RUN_SIMULATION:\n",
         "    for angle_index in range(number_scan_lines):\n",
         "        print(f'Computing scan line {angle_index} of {number_scan_lines}')\n",
         "\n",
         "        # set the input settings\n",
-        "        input_filename = f'example_input_{angle_index}.h5'\n",
+        "        input_filename        = f'example_input_{angle_index}.h5'\n",
         "        # set the input settings\n",
-        "        simulation_options = SimulationOptions(\n",
-        "            pml_inside=False,\n",
-        "            pml_size=pml_size_points,\n",
-        "            data_cast=DATA_CAST,\n",
-        "            data_recast=True,\n",
-        "            save_to_disk=True,\n",
-        "            input_filename=input_filename,\n",
-        "            save_to_disk_exit=False\n",
+        "        simulation_options    = SimulationOptions(\n",
+        "            pml_inside        = False,\n",
+        "            pml_size          = pml_size_points,\n",
+        "            data_cast         = DATA_CAST,\n",
+        "            data_recast       = True,\n",
+        "            save_to_disk      = True,\n",
+        "            input_filename    = input_filename,\n",
+        "            save_to_disk_exit = False\n",
         "        )\n",
         "\n",
         "        # Update the current steering angle\n",
         "        not_transducer.steering_angle = steering_angles[angle_index]\n",
         "\n",
-        "        sensor_data = kspaceFirstOrder2D(\n",
-        "            medium=deepcopy(medium),  # Medium is altered in-place in this function\n",
-        "            kgrid=kgrid,\n",
-        "            source=transducer,\n",
-        "            sensor=transducer,\n",
-        "            simulation_options=simulation_options,\n",
-        "            execution_options=SimulationExecutionOptions(is_gpu_simulation=True)\n",
+        "        # RUN 2D K-WAVE SIMULATION\n",
+        "        sensor_data            = kspaceFirstOrder2D(\n",
+        "            medium             = deepcopy(medium),  # Medium is altered in-place in this function\n",
+        "            kgrid              = kgrid,\n",
+        "            source             = not_transducer,\n",
+        "            sensor             = not_transducer,\n",
+        "            simulation_options = simulation_options,\n",
+        "            execution_options  = SimulationExecutionOptions(is_gpu_simulation=True)\n",
         "        )\n",
         "\n",
-        "        scan_lines[angle_index, :] = not_transducer.scan_line(not_transducer.combine_sensor_data(sensor_data['p'].T))\n",
+        "        # combine sensor outputs and extract scan line\n",
+        "        raw_pressure      = sensor_data['p'].T\n",
+        "        combined_signal   = not_transducer.combine_sensor_data(raw_pressure)\n",
+        "        scan_lines[angle_index, :] = not_transducer.scan_line(combined_signal)\n",
         "\n",
+        "    # save\n",
         "    scipy.io.savemat('example_us_phased_array_scan_lines.mat', {'scan_lines': scan_lines})\n",
         "else:\n",
         "    scan_lines = scipy.io.loadmat('example_us_phased_array_scan_lines')['scan_lines']"
